--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/dating
 spring.datasource.username=postgres
 spring.datasource.password=1237894560
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC+3
