--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,31 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.1.4' // замените на актуальную версию
-    id 'io.spring.dependency-management' version '1.1.3' // замените на актуальную версию
+    id 'org.springframework.boot' version '3.3.5'
+    id 'io.spring.dependency-management' version '1.1.6'
 }
 
 group = 'com.dating.authentication'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
 
 repositories {
     mavenCentral()
 }
 
-ext {
-    lombokVersion = "1.18.32"
-}
-
 dependencies {
-    compileOnly group: 'org.projectlombok', name: 'lombok', version: "${lombokVersion}"
-    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: "${lombokVersion}"
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
