--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/dating
-spring.datasource.username=postgres
-spring.datasource.password=1237894560
+spring.datasource.url={$SPRING_DATASOURCE_URL}
+spring.datasource.username={$SPRING_DATASOURCE_USERNAME}
+spring.datasource.password={$SPRING_DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC+3
